@@ -71,8 +71,10 @@ GList *          pointer_list_view_get_selection (PointerListView *view);
 void             pointer_list_view_set_keep_selection (PointerListView *view,
 						       gboolean keep);
 void             pointer_list_view_select_first  (PointerListView *view);
-void             pointer_list_view_select_next   (PointerListView *view);
-void             pointer_list_view_select_prev   (PointerListView *view);
+void             pointer_list_view_select_next   (PointerListView *view,
+						  gboolean center);
+void             pointer_list_view_select_prev   (PointerListView *view,
+						  gboolean center);
 void             pointer_list_view_scroll_to     (PointerListView *view,
 						  gpointer pointer);
 void             pointer_list_view_set_sort_func (PointerListView *view,
